--- a/src/App.css
+++ b/src/App.css
@@ -82,8 +82,8 @@
 
 
 .scale-up-down-center {
-	-webkit-animation: scale-up-down-center 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-	        animation: scale-up-down-center 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+	-webkit-animation: scale-up-down-center 5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+	        animation: scale-up-down-center 5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
 
 /* ----------------------------------------------
@@ -103,9 +103,13 @@
     -webkit-transform: scale(0);
             transform: scale(0);
   }
-  50% {
+  30% {
     -webkit-transform: scale(1);
             transform: scale(1);
+  }
+  70%{
+    -webkit-transform: scale(1);
+    transform: scale(1);
   }
   100%{
     -webkit-transform: scale(0);
@@ -117,9 +121,13 @@
     -webkit-transform: scale(0);
             transform: scale(0);
   }
-  50% {
+  30% {
     -webkit-transform: scale(1);
             transform: scale(1);
+  }
+  70%{
+    -webkit-transform: scale(1);
+    transform: scale(1);
   }
   100%{
     -webkit-transform: scale(0);
