--- a/src/shared/Transition.css
+++ b/src/shared/Transition.css
@@ -8,22 +8,28 @@ body {
   
   .pageSlider-entering {
     opacity: 0;
-    transform: scale(1.1);
+    /* transform: scale(1.1); */ 
+    transform: translate3d(100%, 0,0);
   }
   
   .pageSlider-entered {
     opacity: 1;
-    transform: scale(1);
-    transition: opacity 300ms, transform 300ms;
+    /* transform: scale(1);
+    transition: opacity 300ms, transform 300ms; */
+    transform: translate3d(0, 0,0);
+    transition: all 500ms;
   }
   
   .pageSlider-exiting {
     opacity: 1;
-    transform: scale(1);
+    /* transform: scale(1); */
+    transform: translate3d(0, 0,0);
   }
   
   .pageSlider-exited {
     opacity: 0;
-    transform: scale(0.9);
+    /* transform: scale(0.9);
     transition: opacity 300ms, transform 300ms;
+    transform: translate3d(-100%, 0,0); */
+    transition: all 700ms;
   }
