--- a/src/shared/Transition.css
+++ b/src/shared/Transition.css
@@ -1,7 +1,11 @@
 body {
     overflow: hidden;
   }
-  
+  @keyframes slidein {
+    0%, 25% { opacity: .5; transform: translateZ(-500px) translateX(200%); }
+    75% { opacity: .5; transform: translateZ(-500px); }
+    100% { opacity: 1; transform: translateZ(0) translateX(0); }
+  }
   .transition-group {
     position: relative;
   }
@@ -10,20 +14,26 @@ body {
     opacity: 0;
     /* transform: scale(1.1); */ 
     transform: translate3d(100%, 0,0);
+    background: pink;
+    animation-name: slidein 4s 1s;
+    
   }
-  
+
   .pageSlider-entered {
     opacity: 1;
     /* transform: scale(1);
     transition: opacity 300ms, transform 300ms; */
     transform: translate3d(0, 0,0);
     transition: all 500ms;
+    background: black;
+    animation-name: slidein 4s 1s;
   }
   
   .pageSlider-exiting {
     opacity: 1;
     /* transform: scale(1); */
     transform: translate3d(0, 0,0);
+    background: blue;
   }
   
   .pageSlider-exited {
@@ -32,6 +42,7 @@ body {
     transition: opacity 300ms, transform 300ms;
     transform: translate3d(-100%, 0,0); */
     transition: all 700ms;
+    background: purple;
   }
 
   .fade-enter {
