--- a/src/shared/Transition.css
+++ b/src/shared/Transition.css
@@ -17,38 +17,27 @@ body {
   }
   
   .pageSlider-entering {
-    opacity: 0;
+    z-index:1;
+    opacity: 0.9;
     /* transform: scale(1.1); */ 
     transform: translate3d(100%, 0,0);
-    background: pink;
-    animation-name: slidein 4s 1s;
     
   }
 
   .pageSlider-entered {
     opacity: 1;
-    /* transform: scale(1);
-    transition: opacity 300ms, transform 300ms; */
     transform: translate3d(0, 0,0);
     transition: all 500ms;
-    background: black;
-    animation-name: slidein 4s 1s;
   }
   
   .pageSlider-exiting {
     opacity: 1;
-    /* transform: scale(1); */
     transform: translate3d(0, 0,0);
-    background: blue;
   }
   
   .pageSlider-exited {
-    opacity: 0;
-    /* transform: scale(0.9);
-    transition: opacity 300ms, transform 300ms;
-    transform: translate3d(-100%, 0,0); */
+    opacity: 0.9;
     transition: all 700ms;
-    background: purple;
   }
   .fade-appear,
   .fade-enter {
